@@ -59,6 +59,9 @@ struct _CacheClient {
 void a_Cache_init(void);
 int a_Cache_open_url(void *Web, CA_Callback_t Call, void *CbData);
 int a_Cache_get_buf(const DilloUrl *Url, char **PBuf, int *BufSize);
+const char *a_Cache_get_content_type(const DilloUrl *url);
+const char *a_Cache_set_content_type(const DilloUrl *url, const char *ctype,
+                                     bool_t force);
 uint_t a_Cache_get_flags(const DilloUrl *url);
 void a_Cache_process_dbuf(int Op, const char *buf, size_t buf_size,
                           const DilloUrl *Url);
