@@ -24,6 +24,9 @@ extern "C" {
 void a_Capi_init(void);
 int a_Capi_open_url(DilloWeb *web, CA_Callback_t Call, void *CbData);
 int a_Capi_get_buf(const DilloUrl *Url, char **PBuf, int *BufSize);
+const char *a_Capi_get_content_type(const DilloUrl *url);
+const char *a_Capi_set_content_type(const DilloUrl *url, const char *ctype,
+                                    bool_t force);
 int a_Capi_get_flags(const DilloUrl *Url);
 int a_Capi_dpi_send_cmd(DilloUrl *url, void *bw, char *cmd, char *server,
                          int flags);
